
= rufus-scheduler CHANGELOG.txt


== rufus-scheduler - 3.3.0    not yet released

- Reject "day 0" in cronlines, thanks to Ramon Tayag, https://github.com/ramontayag
- Move away from ENV['TZ'], thanks to Akinori Musha, https://github.com/knu
- Fix .parse_to_time vs Date issue, as reported by @nsatragno


== rufus-scheduler - 3.2.2    released 2016-08-14

- job opt hash preservation, as suggested in gh-212, by https://github.com/d-m-u
- introduce Job#previous_time
- countered ActiveRecord 3.2.22 on gh-210, by https://github.com/paulodelgado


== rufus-scheduler - 3.2.1    released 2016-05-04

- accept '* * * * 5L' (last friday) (equivalent to '* * * * 5#-1')
- CronLine#to_a (#to_array aliasing to it)
- simplify .parse_duration (and trim input)
- raise on "*/0 * * * *", by https://github.com/simook
- introduce "days to end of month" in cron strings


== rufus-scheduler - 3.2.0    released 2015-12-28

- cache CronLine#brute_frequency results, gh-188 and gh-89
- "every" shift prevention by https://github.com/Korrigan
- Ruby warnings silenced by https://github.com/vivitar


== rufus-scheduler - 3.1.10    released 2015-11-18

- allow for :first_in => 0, gh-179 by https://github.com/JonMcPherson
  for https://github.com/Shopify/dashing/commit/ea3730fa4
- stop shipping specs in gem


== rufus-scheduler - 3.1.9    released 2015-11-12

- fix potential RuntimeError in CronLine#prev_second,
  by Alexandru https://github.com/alexandru-calinoiu


== rufus-scheduler - 3.1.8    released 2015-11-10

- stop jumping eagerly out of DST, fix for one hour jump when leaving DST
  thanks Alyssa http://github.com/alyssa


== rufus-scheduler - 3.1.7    released 2015-10-15

- ack #unscheduled_at in #scheduled?, by Claude https://github.com/claudeatsafe


== rufus-scheduler - 3.1.6    released 2015-10-01

- fix job id uniqueness (JRuby), thanks 김성식 https://github.com/kssminus


== rufus-scheduler - 3.1.5    released 2015-09-25
