@@ -4,6 +4,7 @@
 
 == rufus-scheduler - 3.3.0    not yet released
 
+- Bring in Piavka's Job#trigger_off_schedule, gh-214
 - Reject "day 0" in cronlines, thanks to Ramon Tayag, https://github.com/ramontayag
 - Move away from ENV['TZ'], thanks to Akinori Musha, https://github.com/knu
 - Fix .parse_to_time vs Date issue, as reported by @nsatragno
